--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,7 +18,11 @@
     "autoprefixer": "^10.4.16",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.12.0",
-    "zustand": "^4.4.1"
+    "zustand": "^4.4.1",
+    "yjs": "^13.6.0",
+    "react-markdown": "^9.0.1",
+    "remark-gfm": "^4.0.0",
+    "remark-breaks": "^4.0.0"
   },
   "devDependencies": {
     "eslint": "^8.52.0",
