--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,20 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
+    "autoprefixer": "^10.4.16",
+    "firebase": "^10.0.0",
     "next": "^14.0.0",
+    "postcss": "^8.4.31",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "firebase": "^10.0.0",
-    "tailwindcss": "^3.4.0",
-    "postcss": "^8.4.31",
-    "autoprefixer": "^10.4.16",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.12.0",
-    "zustand": "^4.4.1",
-    "yjs": "^13.6.0",
     "react-markdown": "^9.0.1",
+    "remark-breaks": "^4.0.0",
     "remark-gfm": "^4.0.0",
-    "remark-breaks": "^4.0.0"
+    "tailwindcss": "^3.4.0",
+    "yjs": "^13.6.0",
+    "zustand": "^4.4.1"
   },
   "devDependencies": {
     "eslint": "^8.52.0",
